# mindustry-pal

./: pyproject.toml
src/mindustry_pal/: __init__.py  __main__.py  campaigns.py  cli.py  files.py
