[project]
name = "mindustry-pal"
description = "Compaign and version manager CLI for Mindustry game"
readme = "README.md"
authors = [
    { name = "Soucelover", email = "mr.ktotov@gmail.com" }
]
dynamic = ["version"]

# ===================
# Requirements (deps)
# ===================
requires-python = ">=3.14"
dependencies = []

# ============
# Build System
# ============
[project.scripts]
mindustry-pal = "mindustry_pal.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
