[project]
name = "mindustry-pal"
description = "Compaign and version manager CLI for Mindustry game"
readme = "README.md"
authors = [
    { name = "Soucelover", email = "mr.ktotov@gmail.com" }
]
dynamic = ["version"]

# ===================
# Requirements (deps)
# ===================
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

# ============
# Build System
# ============
[project.scripts]
mindustry-pal = "mindustry_pal.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# =============
# Ruff Settings
# =============
[tool.ruff]
line-length = 78 # PEP-8

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select = ["ALL"]
ignore = [
    "D",       # Этот репо пока строго не документируется
    "ARG",     # flake8-unused-arguments (иногда полезен для рефакторинга)
    "RUF001",
    "RUF002",
    "RUF003",
    "TD003",   # Вставляем Issue Link, только если создаём Issue
    "FIX",     # Обычно надоедает, но полезно как напоминалка
    "COM812",  # Redundant with formatter
    "PLC0414", # Противоречит семантике неиспользуемых явно импортов
    "EXE001",
]
extend-safe-fixes = ["TC"]
future-annotations = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-builtins]
ignorelist = ["id"]
